Removed use of deprecated method